clang/test/BSC/Negative/Ownership/RuleCheck/multi-level-pointer/multi-level-pointer.cbs
// RUN: %clang_cc1 -verify %s

void write_error_1(int * owned * owned * owned a) {
    ***a = 5;
}// expected-error {{memory leak of value: `a`}} expected-error {{field memory leak of value: `a`, *a, **a are leak}}

void write_error_2(owned int * owned * owned * owned a) { // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    owned int * owned * owned * owned b = a; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    owned int * owned * owned * owned c = a; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
}

void write_error_3(owned int * owned * owned * owned a) { // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    owned int * owned * owned * owned b = a; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    owned int * owned * owned * owned c = b; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
    owned int * owned * owned * owned d = b; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
} 

void * owned VoidPtrOwned();

void write_error_4() {
    void * owned c = VoidPtrOwned();
    void * owned d = c;
    void * owned e = c; 
} 

void f4(int * owned p) {
    int re1;
    re1 = *p;
    return;
} 

int * owned f5(int * owned p) {
    int re1;
    re1 = *p;
    return p;
}

int * owned * owned f6(int * owned * owned p) {
    int re1;
    re1 = **p;
    return p;
}

void ufree(void * owned p);

void f8(int * owned * owned * owned p) {
    int * owned * owned q;
    q = *p;
    ufree((void * owned)p);
} 
void f9(int * owned * owned * owned p) {
    int * owned q = **p;
    ufree((void * owned)p); 
} 